<resources>
    <string name="app_name">SimpleNotepad</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_editor">NoteEditorActivity</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_editor">Editor</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="capture">Capture</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="recapture">Recapture</string>
    <string name="finishPhotoActivity">Finish PhotoActivity</string>
    <string name="finish">Finish</string>

    <string name="picture">Picture</string>
    <string name="select_intro">Long-press a thumbnail to add an image</string>
    <string name="show_intro">Press a thumbnail to display at larger size</string>



</resources>
